Ignore visibility:hidden elements when computing compositing layer bounds https://bugs.webkit.org/show_bug.cgi?id=92569

Reviewed by Dan Bernstein.

Source/WebCore:

When computing the bounds of compositing layers, we would take into account
layers with no visible content (visibility:hidden, and no non-hidden descendants).
This caused some huge layers in mobile Google maps.

Tests: compositing/geometry/bounds-ignores-hidden-composited-descendant.html
       compositing/geometry/bounds-ignores-hidden-dynamic.html
       compositing/geometry/bounds-ignores-hidden.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateLayerBounds): If the ExcludeHiddenDescendants flag is set, return
the empty rect for layers with no visible content or descendants, as long as the layer is not
the root of the subtree whose bounds are being computed.
calculateLayerBounds() currently (I think incorrectly) passes the default flags to the recursive calls.
It should probably just pass 'flags', but to make this change safe, OR in the ExcludeHiddenDescendants
flag.
* rendering/RenderLayer.h: Add an ExcludeHiddenDescendants flag to the CalculateLayerBoundsFlags.
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::calculateCompositedBounds): Pass the ExcludeHiddenDescendants
flag.

LayoutTests:

Tests related to visibility:hidden's affect on composited layer bounds.

* compositing/geometry/bounds-ignores-hidden-composited-expected.txt: Added.
* compositing/geometry/bounds-ignores-hidden-composited-descendant.html: Added.
Test with visibility:visible descendants of a visibility:hidden element in a
compositing layer.

* compositing/geometry/bounds-ignores-hidden-dynamic-expected.txt: Added.
* compositing/geometry/bounds-ignores-hidden-dynamic.html: Added.
Test that changes visibility on descendants of a compositing layer, to test dynamic changes.

* compositing/geometry/bounds-ignores-hidden-expected.txt: Added.
* compositing/geometry/bounds-ignores-hidden.html: Added.
Test with a compositing layer having visibility:hidden descendants, which dumps
layer tree information.

Canonical link: https://commits.webkit.org/110405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123971 268f45cc-cd09-0410-ab3c-d52691b4dbfc